Makes sure only minor releases are visible to non-editors, brings back module linking, references bug fix

--- a/client/src/app/modules/code-editor/pages/code-editor-page/code-editor-page.component.scss
+++ b/client/src/app/modules/code-editor/pages/code-editor-page/code-editor-page.component.scss
@@ -180,7 +180,7 @@ $display-height: calc(100vh - 40px - 40px);
       }
 
       .versions-select {
-        width: 50px !important;
+        width: 55px !important;
       }
 
       multi-switch-button {
